@@ -1,3 +1,8 @@
+2005-12-08 Quentin Mathe <qmathe@club-internet.fr>
+
+    * Source/Search/LCQueryFilter.m:
+    Add -hash: and -isEqual:
+
 2005-11-09 Quentin Mathe <qmathe@club-internet.fr>
 
     Warning! Xcode compilation untested.
